javaDSL/src/test/resources/typeSystemTestModels/invalid/interfaces/InterfaceCannotDependSelf.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.interfaces;

public interface InterfaceCannotDependSelf extends InterfaceCannotDependSelf {

}
